--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "test:watch": "jest --watchAll",
     "docs": "rm -rf ./docs && typedoc --excludeExternals --externalPattern '**/node_modules/**' --ignoreCompilerErrors --mode modules --out ./docs ./src"
   },
   "author": "TronTrade",
@@ -13,7 +14,7 @@
   "dependencies": {
     "@babel/parser": "^7.3.4",
     "@babel/types": "^7.3.4",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^24.0.12",
     "@types/socket.io-client": "^1.4.32",
     "apollo-cache-inmemory": "^1.4.2",
     "apollo-client": "^2.4.12",
@@ -28,7 +29,7 @@
     "rxjs": "^6.4.0",
     "socket.io-client": "^2.2.0",
     "tronweb": "^2.4.3",
-    "ts-jest": "^24.0.0",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.0.3",
     "typedoc": "^0.14.2",
     "typedoc-plugin-external-module-name": "^2.0.0",
