--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf ./dist && tsc",
+    "dev": "tsc -w",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "docs": "rm -rf ./docs && typedoc --excludeExternals --externalPattern '**/node_modules/**' --ignoreCompilerErrors --mode modules --out ./docs ./src"
